--- a/package.json
+++ b/package.json
@@ -8,17 +8,12 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^1.0.1",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
+    "grunt-casper": "^0.4.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-env": "^0.4.2",
-    "grunt-newer": "^0.7.0",
     "grunt-shell": "^1.1.1",
     "jshint-stylish": "^1.0.0",
-    "laika": "^0.3.10",
     "load-grunt-tasks": "^0.6.0",
-    "phantomjs": "^1.9.10",
     "time-grunt": "^1.0.0"
   }
 }
